bk_ida/gccida/g1/get_true_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_true_reg/src/reg-stack.c:1047:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_true_reg/src/reg-stack.c:1060:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_true_reg/src/reg-stack.c:1062:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v2 + 2))] 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_true_reg/src/obj/reg-stack.o] Error 1
